# aurio

./: Cargo.toml  README.md  aurio_startup.pd
TestProject.aurio/: project.ron
examples/: basic_delay.rs  delay.rs  full_delay.rs  looper.rs  melody.rs  midi_debug.rs  multitrack_looper.rs  two_osc.rs  virtual_keyboard.rs
examples/live_dsp/: main.rs  parser.rs
examples/live_dsp/scores/: two_osc.au
scores/: two_osc.au
src/: engine.rs  events.rs  lib.rs  main.rs  parser.rs  project.rs
src/audio/: instrument.rs  mod.rs  track.rs  voice.rs
src/scripting/: lua_runtime.rs  mod.rs  variables.rs
src/timing/: mod.rs  scheduler.rs  sequence.rs  state_machine.rs
src/ui/: mod.rs  piano_roll.rs
