[package]
name = "aurio"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.8.0"
cpal = "0.17.0"
crossterm = "0.29.0"
midir = "0.10.3"
notify = "8.2.0"
ringbuf = "0.4.8"
mlua = { version = "0.11", features = ["lua54", "send"] }
parking_lot = "0.12"
crossbeam = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"
eframe = "0.33"
egui = "0.33"
rfd = "0.17"
